test for bug fix on mobile #2

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1327,6 +1327,14 @@ section#asks {
     margin-right: 30rem;
 }
 
+.testElement {
+    font-size: 4rem;
+    color: blue;
+    background-color:darkgoldenrod;
+    padding: 2rem;
+    border: 1rem solid blue;
+}
+
 /* Animations */
 @keyframes rotation {
     from {
@@ -1535,6 +1543,14 @@ section#asks {
         overflow-x: hidden;
         overflow-y: scroll;
 -webkit-overflow-scrolling: touch;
+    }
+
+    .testElement {
+        font-size: 4rem;
+        color: red;
+        background-color:darkgoldenrod;
+        padding: 2rem;
+        border: 1rem dashed red;
     }
 }
 
